<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DSD TECH SWITCH</string>
    <string name="device">Devices</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="appName">DSD TECH SWITCH</string>

    <string name="connecting_alert">Bluetooth is connecting,Please wait.</string>
    <string name="connect_alert">Bluetooth connect success.</string>
    <string name="disconnect_alert">Bluetooth disconnected.</string>
    <string name="send">SEND</string>
    <string name="conn">CONNECT</string>
    <string name="rssi">%d mDb</string>
    <string name="disconn">DISCONNECT</string>
    <string name="clear">CLEAR</string>
    <string name="exit">EXIT</string>
    <string name="setting">SETTING</string>
    <string name="read">READ</string>
    <string name="write">WRITE</string>
    <string name="hex" translatable="false">HEX</string>
    <string name="string" translatable="false">ASCII</string>
    <string name="uncorrect_data">The data is not correct , please check and resend</string>

    <!-- ScannerFrag -->
    <string name="scanner_action_scan">Scan</string>
    <string name="scanner_action_stop_scanning">Stop Scanning</string>
    <string name="scanner_title">Select Device:</string>
    <string name="scanner_action_cancel">Close</string>
    <string name="scanner_subtitle__not_bonded">Available device:</string>
    <!-- <string name="scanner_subtitle_bonded">已绑定设备:</string> -->
    <string name="scanner_empty">No device available</string>
    <string name="not_available">n/a</string>


    <!-- Common -->
    <string name="device_loss_link">The blue tooth is disconnected,reconnect automatically later</string>
    <string name="no_ble">Blue tooth4.0 not supported by phone</string>
    <string name="device_error">Device not supported</string>
    <string name="device_disConn">Disconnected</string>
    <string name="device_conn">Connected successfully</string>
    <string name="device_conning">Connecting&#8230;</string>
    <string name="cant_send_when_moving">The device is in the running state, can not be applied instruction</string>
    <string name="bluetooth_disabled">Please turn on Bluetooth</string>


    <string name="serviceUUID">serviceUUID:</string>
    <string name="writeUUID">writeUUID:</string>
    <string name="notifyUUID">notifyUUID:</string>
    <string name="save">SAVE</string>

    <string name="copyright" translatable="false">CopyRight©2015All Rights Reserved\nwww.sihaicorp.com\n深圳市四海盛电科技有限公司
    </string>
    <string name="unknown"><![CDATA[<UNKNOWN>]]></string>
    <string name="back">Back</string>
    <string name="Relay">Relay</string>
    <string name="SendRec">Data</string>
    <string name="Relay1">Relay1</string>
    <string name="Relay_all_on">ALL ON</string>
    <string name="Relay_all_off">ALL OFF</string>
    <string name="Relay2">Relay2</string>
    <string name="Relay3">Relay3</string>
    <string name="Relay4">Relay4</string>
    <string name="connecting">CONNECTING</string>
    <string name="hex_rx">HEX RX:</string>
    <string name="hex_tx">HEX TX</string>
    <string name="ms">ms</string>
    <string name="auto_send">Auto Send</string>

    <string name="auto_send_interval_error">Auto send interval error!</string>
<!--    <string name="web_set">Website: http://www.dsdtech-global.com</string>-->
    <string name="web_set">Website: http://www.deshide.com</string>
    <string name="support">DSD TECH Bluetooth V1.5 (2023-5-31)</string>
    <string name="sales">Email:dsdtech@163.com</string>
    <string name="contact">Any question about DSD TECH brand products, please feel free to contact us!</string>
    <string name="about_us">About US</string>
    <string name="connect_failed">Failed to connect Bluetooth device, please try again!</string>
    <string name="relay_open">ON</string>
    <string name="relay_close">OFF</string>

    <!-- Beacon Fragment -->
    <string name="transmit_power">Transmit Power:</string>
    <string name="set">Set</string>
    <string name="ad_interval">AD Interval:</string>
    <string name="beacon_name">Beacon Name:</string>
    <string name="eddystone">Eddystone</string>
    <string name="url_https">URL: https://</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="iBeacon">iBeacon</string>
    <string name="uuid">UUID:</string>
    <string name="major">Major:</string>
    <string name="minor">Minor:</string>
    <string name="finish">Finish</string>
    <string name="beacon">Beacon</string>
    <string name="start">Start</string>
    <string name="beacon_name_check">Beacon Name must be 1~25 characters</string>
    <string name="uuid_check">uuid must be 32 characters, and each character should be in [0~9A~F]</string>
    <string name="uuid_check_length">uuid must be 32 characters</string>
    <string name="uuid_check_rule">Each character should be in [0~9A~F]</string>
    <string name="major_check">Major and minor must be an integer,and the range is [0, 65535]</string>
    <string name="cancel">Cancel</string>
    <string name="exit_beacon_alert">This operate will cause exit the Set mode.Do you mean it?</string>
    <string name="sure">Sure</string>
    <string name="my_devices">My Devices</string>
    <string name="available_devices">Available Devices</string>
    <string name="pair">Pair</string>
    <string name="wait_moment">Please wait a moment!</string>
    <string name="rename">Rename</string>
    <string name="remove_sure_alert">Remove this device?</string>
    <string name="password">Password</string>
    <string name="remove">Remove</string>
    <string name="password_setting">Password Setting</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="operation_failed">Operation failed</string>
    <string name="cur_password">Current Password</string>
    <string name="reset">Change Password</string>
    <string name="refreshing">Refreshing</string>
    <string name="Wrong_Password">Wrong Password!</string>
    <string name="add_my_devices">Add To My Devices</string>
    <string name="Save">Save</string>
    <string name="password_rule_alert">Please set a 4-digit password \n for the device</string>
    <string name="no_device">There is no my device.  please pair and add to my device</string>
</resources>
