<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/round_white_rect"
    >

    <TextView
        android:id="@+id/rename_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/cur_password"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/rename_edit"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:textScaleX="1.55"
        android:background="@drawable/password_bg"
        android:lines="1"
        android:text="1234"
        android:textSize="40sp"
        android:textCursorDrawable="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save_password"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintTop_toBottomOf="@+id/rename_title" />

    <Button
        android:id="@+id/save_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/rename_edit"
        app:layout_constraintTop_toTopOf="@+id/rename_edit"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/hor_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/rename_edit"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/dialog_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cancel"
        android:padding="15dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/hor_divider"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="@+id/dialog_cancel"
        app:layout_constraintEnd_toStartOf="@+id/dialog_sure"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dialog_cancel"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_cancel" />

    <TextView
        android:id="@+id/dialog_sure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/reset"
        android:textSize="16sp"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="@+id/dialog_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view2" />

</android.support.constraint.ConstraintLayout>