<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/round_white_rect"
    >

    <TextView
        android:id="@+id/rename_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/rename"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/rename_edit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/edit_bg"
        android:lines="1"
        android:maxEms="32"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rename_title" />

    <View
        android:id="@+id/hor_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/rename_edit"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/dialog_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cancel"
        android:padding="15dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/hor_divider"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="@+id/dialog_cancel"
        app:layout_constraintEnd_toStartOf="@+id/dialog_sure"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dialog_cancel"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_cancel" />

    <TextView
        android:id="@+id/dialog_sure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sure"
        android:textSize="16sp"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="@+id/dialog_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view2" />

</android.support.constraint.ConstraintLayout>