<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@android:color/transparent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/wide1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/pay_View1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_white_rect"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >

    <TextView
        android:id="@+id/rename_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/cur_password"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--==============pass=================-->
    <LinearLayout
        android:id="@+id/pass_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/rename_title"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">
        <!--======1======-->
        <EditText
            android:id="@+id/tv_pass1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/payview_stroke_gray_shape"
            android:gravity="center"
            android:layout_gravity="center"
            android:cursorVisible="false"
            android:focusable="false"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_42" />

        <!--=====2=====-->
        <EditText
            android:id="@+id/tv_pass2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/payview_stroke_gray_shape"
            android:gravity="center"
            android:layout_gravity="center"
            android:cursorVisible="false"
            android:focusable="false"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_42" />


        <!--=====3=====-->
        <EditText
            android:id="@+id/tv_pass3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/payview_stroke_gray_shape"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_42"
            android:cursorVisible="false"
            android:focusable="false"
            android:gravity="center"/>

        <!--=====4=======-->
        <EditText
            android:id="@+id/tv_pass4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/payview_stroke_gray_shape"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_42"
            android:cursorVisible="false"
            android:focusable="false"
            android:gravity="center"/>

        <Button
            android:id="@+id/save_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/rename_edit"
            app:layout_constraintTop_toTopOf="@+id/rename_edit"
            app:layout_constraintEnd_toEndOf="parent"/>

    </LinearLayout>

        <View
            android:id="@+id/hor_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/pass_layout"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cancel"
            android:padding="15dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/hor_divider"
            app:layout_constraintEnd_toStartOf="@+id/view2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="@+id/dialog_cancel"
            app:layout_constraintEnd_toStartOf="@+id/dialog_sure"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/dialog_cancel"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_cancel" />

        <TextView
            android:id="@+id/dialog_sure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reset"
            android:textSize="16sp"
            android:padding="15dp"
            app:layout_constraintTop_toTopOf="@+id/dialog_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/view2" />

    </android.support.constraint.ConstraintLayout>

    <View
        android:id="@+id/wide"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <FrameLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/graye3">
        <GridView
            android:id="@+id/gv_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:horizontalSpacing="1dp"
            android:verticalSpacing="1dp"
            android:numColumns="3"
            android:listSelector="@color/graye3"  />
    </FrameLayout>

</LinearLayout>
