<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/title_padding"
    android:paddingBottom="@dimen/title_padding">

    <TextView
        android:id="@+id/item_device_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/title_padding"
        android:paddingStart="@dimen/title_padding"
        android:paddingEnd="@dimen/title_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/item_device_connect"
        android:ellipsize="marquee"
        android:text="设备名称"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/item_device_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/title_padding"
        android:paddingEnd="@dimen/title_padding"
        android:gravity="center_vertical"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/item_device_name"
        android:paddingBottom="@dimen/title_padding"
        android:text="设备地址"
        android:lines="1" />

    <!--<TextView-->
        <!--android:id="@+id/item_device_connect"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="30dp"-->
        <!--android:gravity="center"-->
        <!--android:textSize="14sp"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="@+id/item_device_name"-->
        <!--app:layout_constraintBottom_toBottomOf="@+id/item_device_address"-->
        <!--android:background="@drawable/btn_bg"-->
        <!--android:paddingEnd="10dp"-->
        <!--android:paddingStart="10dp"-->
        <!--android:textColor="#ffffff"-->
        <!--android:text="@string/conn"/>-->

    <Switch
        android:id="@+id/item_device_connect"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:switchMinWidth="10dp"
        android:focusable="false"
        android:showText="false"
        android:thumb="@drawable/switch_ios_thumb"
        android:track="@drawable/switch_ios_track_selector"
        android:layout_marginEnd="@dimen/title_padding"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/item_device_name"
        app:layout_constraintBottom_toBottomOf="@+id/item_device_address"/>

    <!--<View-->
        <!--android:id="@+id/relaybg"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--app:layout_constraintTop_toTopOf="@+id/relay1"-->
        <!--app:layout_constraintBottom_toBottomOf="@+id/relay1"/>-->

    <LinearLayout
        android:id="@+id/relay1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/title_padding"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/relay2"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@+id/item_device_connect">

        <Switch
            android:id="@+id/relay1_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchMinWidth="10dp"
            android:checked="true"
            android:focusable="false"
            android:showText="false"
            android:thumb="@drawable/switch_ios_thumb"
            android:track="@drawable/switch_ios_track_selector" />

        <TextView
            android:id="@+id/relay1_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/title_padding"
            android:text="@string/Relay2"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/relay2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/title_padding"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/relay1"
        app:layout_constraintEnd_toStartOf="@+id/relay3"
        app:layout_constraintTop_toBottomOf="@+id/item_device_connect">

        <Switch
            android:id="@+id/relay2_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchMinWidth="10dp"
            android:checked="true"
            android:focusable="false"
            android:showText="false"
            android:thumb="@drawable/switch_ios_thumb"
            android:track="@drawable/switch_ios_track_selector" />

        <TextView
            android:id="@+id/relay2_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/title_padding"
            android:text="@string/Relay3"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/relay3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/title_padding"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/relay2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_device_connect">

        <Switch
            android:id="@+id/relay3_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchMinWidth="10dp"
            android:checked="true"
            android:focusable="false"
            android:showText="false"
            android:thumb="@drawable/switch_ios_thumb"
            android:track="@drawable/switch_ios_track_selector" />

        <TextView
            android:id="@+id/relay3_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/title_padding"
            android:text="@string/Relay4"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>